--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
+<!DOCTYPE html>
 <html>
-<title>
-  
-</title>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<style type="text/css">
+  body{
+    max-width: 1200px;
+    font-size: 18px;
+  }
+  .aside_login{
+    padding-top:20px;
+  }
+</style>
+  {% block head %}
+  {% endblock %}
+</head>
 <body>
-  
-
 <form>
   <!-- Email input -->
   <div class="form-outline mb-4">
