--- a/index.html
+++ b/index.html
@@ -14,59 +14,46 @@
   }
 </style>
 </head>
+<script>
+  function login(){
+    alert("you are being redirected to kenneth c f piggy bank application an ongoing development of my own business Note. next page you see is an developement server hosted at pythonanywhere");
+    window.location.href = "http://kennethcf.pythonanywhere.com/login";
+  }
+  function register(argument) {
+    alert("you are being redirected to kenneth c f piggy bank application an ongoing development of my own business Note. next page you see is an developement server hosted at pythonanywhere");
+    window.location.href = "http://kennethcf.pythonanywhere.com/register";
+  }
+</script>
 <body>
-<form>
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+<!-- As a heading -->
+<nav class="navbar navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">Greetings from India <br>an citizen of India :)</span>
+</nav>
+  <center>
+<p>
+  this is a static webpage created to promote kennethcf.pythonanywhere.com
+  this is an development server no forms of payment is collected
+  instruction to complete your task login using the given user information linked to your details and complete the profile page to activate your account 
+</p>
+<div>
+  
+  <button type="button" class="btn btn-primary" onclick="login()" style="width: 100px;margin-bottom: 30px;">Login</button><br>
+  <button type="button" class="btn btn-primary" style="width: 100px;margin-bottom: 30px;" onclick="register()">register</button>
+</div>
+<div>
+<p> hi this is an redirect page to my online business which is being developed has an venture, 
+  about the app it's an finance based tool used by soon to be registered Mutual Fund under Kenneth C F (propritor)
+  please note next page you see is not any financial advice nor any forms of payment will be collected
+</div>
+</center>
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-dark" href="https://mdbootstrap.com/">Kenneth C F</a>
   </div>
-
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
-  </div>
-
-  <!-- 2 column grid layout for inline styling -->
-  <div class="row mb-4">
-    <div class="col d-flex justify-content-center">
-      <!-- Checkbox -->
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-        <label class="form-check-label" for="form2Example31"> Remember me </label>
-      </div>
-    </div>
-
-    <div class="col">
-      <!-- Simple link -->
-      <a href="#!">Forgot password?</a>
-    </div>
-  </div>
-
-  <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-
-  <!-- Register buttons -->
-  <div class="text-center">
-    <p>Not a member? <a href="#!">Register</a></p>
-    <p>or sign up with:</p>
-    <button type="button" class="btn btn-link btn-floating mx-1">
-      <i class="fab fa-facebook-f"></i>
-    </button>
-
-    <button type="button" class="btn btn-link btn-floating mx-1">
-      <i class="fab fa-google"></i>
-    </button>
-
-    <button type="button" class="btn btn-link btn-floating mx-1">
-      <i class="fab fa-twitter"></i>
-    </button>
-
-    <button type="button" class="btn btn-link btn-floating mx-1">
-      <i class="fab fa-github"></i>
-    </button>
-  </div>
-</form>
+  <!-- Copyright -->
+</footer>
 </body>
+
 </html>
